UPDATE: Template data binding with ProjectWindow

--- a/src/data/project.json
+++ b/src/data/project.json
@@ -2,25 +2,34 @@
   "tags": {
     "language": [
       {
-        "id": "js",
+        "tag": "js",
         "label": "JavaScript"
       },
       {
-        "id": "ts",
+        "tag": "ts",
         "label": "TypeScript"
       }
     ]
   },
   "content": [
     {
-      "tag": "js",
-      "title": "test",
-      "desc": "Hello,"
+      "name": "test",
+      "data": "2020.01.01",
+      "description": "Hello",
+      "tag": [],
+      "content": [
+        {
+          "type": "text",
+          "data": "This is text"
+        }
+      ]
     },
     {
-      "tag": ["js", "ts"],
-      "title": "node-schook-kr",
-      "desc": "Hello 2"
+      "name": "node-schook-kr",
+      "data": "2020.01.01",
+      "description": "Hello 2",
+      "tag": ["js"],
+      "content": []
     }
   ]
 }
