UPDATE: Add url property into project data
- And add show more effects!

--- a/src/data/project.json
+++ b/src/data/project.json
@@ -73,7 +73,8 @@
       "date": "2020.01.01",
       "image": "contents/download.jpg",
       "description": "Hello",
-      "tag": []
+      "tag": [],
+      "url": "https://google.com"
     },
     {
       "name": "node-schook-kr",
