--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-2",
+    "axios": "^0.21.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.1",
     "vue-router": "^4.0.0-beta.13",
