--- a/src/data/project.json
+++ b/src/data/project.json
@@ -72,7 +72,7 @@
       },
       {
         "tag": "docker",
-        "color": "ts",
+        "color": "dodgerblue",
         "label": "Docker"
       },
       {
@@ -88,8 +88,8 @@
       "date": "2020.01.01",
       "image": "contents/download.jpg",
       "description": "Hello",
-      "tag": [],
-      "url": "https://google.com"
+      "tag": ["docker"],
+      "url": "https://github.com/leegeunhyeok/school-kr"
     },
     {
       "name": "node-schook-kr",
