--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "resume",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leegeunhyeok/resume.git"
+  },
+  "author": "Geunhyeok LEE <dev.ghlee@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/leegeunhyeok/resume/issues"
+  },
+  "homepage": "https://github.com/leegeunhyeok/resume#readme",
   "dependencies": {
     "axios": "^0.21.0",
     "register-service-worker": "^1.7.1",
